src/objects/Recruit__c.object
<CustomObject>
    <description>Political Campaigns/Shifts;</description>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Agent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Email__c</fullName>
        <label>Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recruits</relationshipLabel>
        <relationshipName>Recruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_First_Name__c</fullName>
        <label>Alt First Name</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Language__c</fullName>
        <label>Alt Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SPANISH</fullName>
                </value>
                <value>
                    <fullName>RUSSIAN</fullName>
                </value>
                <value>
                    <fullName>HMONG</fullName>
                </value>
                <value>
                    <fullName>CANTONESE</fullName>
                </value>
                <value>
                    <fullName>MANDARIN</fullName>
                </value>
                <value>
                    <fullName>CHINESE</fullName>
                </value>
                <value>
                    <fullName>VIETNAMESE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Last_Name__c</fullName>
        <label>Alt Last Name</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Middle_Name__c</fullName>
        <label>Alt Middle Name</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Person_Type__c</fullName>
        <label>Alt Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alllies</fullName>
                    <label>Allies</label>
                </value>
                <value>
                    <fullName>Friends/Family</fullName>
                </value>
                <value>
                    <fullName>Not Yet Union</fullName>
                </value>
                <value>
                    <fullName>Pre-member Community</fullName>
                </value>
                <value>
                    <fullName>Pre-member Hospital/Kaiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Attended_2__c</fullName>
        <formula>IF( Total_Shift__c &gt;0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COPE_Pledge__c</fullName>
        <formula>IF(  ISBLANK(Recruit__c ) , 0, Recruit__r.COPE_Pledge__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPE Pledge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CS_Recruited_By__c</fullName>
        <formula>Recruited_By__r.Contract_Specialist__c</formula>
        <label>CS Recruited By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Volunteer__c</fullName>
        <formula>Recruit__r.Contract_Specialist__c</formula>
        <label>CS Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <formula>Signed_Up_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Organizer_Recruited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Community Only.</inlineHelpText>
        <label>Community Organizer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>&quot;GOOD HEALTH, GOOD JOBS FOR CALIFORNIA&quot;</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>equals</operation>
                <value>Organizer,ORGANIZER,organizer</value>
            </filterItems>
            <filterItems>
                <field>Contact.Division_Type__c</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <filterItems>
                <field>Contact.Department</field>
                <operation>equals</operation>
                <value>COMMUNITY OUTREACH</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>contains</operation>
                <value>ORG,Org,org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recruits (Recruited By Organizer)</relationshipLabel>
        <relationshipName>Recruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfDt__c</fullName>
        <description>This is a confirmed datetime field short name use for list view.</description>
        <formula>Confirmed_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a confirmed datetime field short name use for list view.</inlineHelpText>
        <label>ConfDt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conf__c</fullName>
        <description>This is a confirmed field short name use for list view.</description>
        <formula>Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a confirmed field short name use for list view.</inlineHelpText>
        <label>Conf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Response__c</fullName>
        <label>Confirm Response</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Time__c</fullName>
        <label>Confirmed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <formula>IF(Confirm_Response__c=&quot;Confirmed&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Recruit__r.Salesforce_Contact_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <description>The Coordinator or Acting Manager of the UNION REP/ORG.</description>
        <formula>IF
( 

Recruited_By__r.Employer1__c =&apos;SEIU-UHW&apos; &amp;&amp; CONTAINS(&quot;Kaiser:KAISER:Hospital:HOSPITAL:Community:COMMUNITY&quot;,Recruited_By__r.Department)  &amp;&amp;  CONTAINS(&quot;UNION REP/ORG:REG POLI ORG&quot;,Recruited_By__r.Title),  
Recruited_By__r.User_Profile__r.Acting_Manager__r.FirstName &amp; &apos; &apos; &amp; Recruited_By__r.User_Profile__r.Acting_Manager__r.LastName ,    
Recruited_By__r.Coordinator__c 

)</formula>
        <inlineHelpText>The Coordinator or Acting Manager of the UNION REP/ORG.</inlineHelpText>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditShift__c</fullName>
        <formula>IF( ElapsedMins__c  &gt;= 90 &amp;&amp; ElapsedMins__c &lt;=179 , &quot;Half&quot;,   IF(ElapsedMins__c &gt;=180, &quot;Full&quot;, &quot;None&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreditShift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Half</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                    <isActive>false</isActive>
                    <label>Partial</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>IF(ISNULL(Recruit__c) || ISBLANK(Recruit__c), Recruited_By__r.Department,  Recruit__r.Department )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>IF (OR(ISNULL(  Recruit__c),ISBLANK(Recruit__c)),
  IF (Recruited_By__r.Account.Name=&quot;SEIU-UHW&quot;,  IF(CONTAINS(Recruited_By__r.Department, &quot;COMMUNITY&quot;) , &quot;Community&quot;, Recruited_By__r.Department) , TEXT(Recruited_By__r.Account.Account_Group__c)),
IF(  CONTAINS(&quot;8913:8955:8956:8957&quot;, Recruit__r.Account.Employer_ID__c), 
 &quot;KAISER&quot; , TEXT(Recruit__r.Account.Account_Group__c) 
)
)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard__c</fullName>
        <formula>IF(Has_Contact_Record__c=TRUE,  Recruit__r.EBoard__c, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ElapsedMins__c</fullName>
        <formula>IF(Signed_Out_Time__c - Signed_In_Time__c &gt; 0 , ROUND((Signed_Out_Time__c - Signed_In_Time__c) * 24*60,0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ElapsedMins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <formula>IF(
  Signed_Out_Time__c - Signed_In_Time__c &gt; 0 ,
  TEXT( FLOOR( Signed_Out_Time__c - Signed_In_Time__c ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (Signed_Out_Time__c - Signed_In_Time__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (Signed_Out_Time__c - Signed_In_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ElapsedTime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( Has_Contact_Record__c =TRUE, Recruit__r.Email,  Alt_Email__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_ID__c</fullName>
        <formula>IF(ISBLANK( Alt_Employer__c), IF (ISBLANK( Recruited_By__r.Account.Employer_ID__c ), Recruit__r.Account.Employer_ID__c,Recruited_By__r.Account.Employer_ID__c), Alt_Employer__r.Employer_ID__c)</formula>
        <label>Employer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>IF( AND(AND(AND(Recruit__r.Account.Name =&quot;SEIU-UHW&quot;), Alt_Last_Name__c &lt;&gt;&quot;&quot;), TEXT(Alt_Person_Type__c)=&quot;Friend/Family of UHW Staff&quot; ),&quot;STAFF GUEST&quot;
,
IF(ISBLANK( Alt_Employer__c), IF (ISBLANK(Recruit__r.Employer1__c), Recruited_By__r.Account.Name,Recruit__r.Employer1__c),  Alt_Employer__r.Name ))</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Region__c</fullName>
        <formula>IF (OR(ISNULL( Recruit__r.Employer1__c),ISBLANK(Recruit__r.Employer1__c)), TEXT(Recruited_By__r.Account.Region__c),TEXT(Recruit__r.Account.Region__c))</formula>
        <label>Employer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exempt_Staff__c</fullName>
        <formula>Owner:User.Non_Exempt_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exempt Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <formula>Recruit__r.FID__c</formula>
        <label>FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Contact_Record__c</fullName>
        <formula>if(isblank(Recruit__c), FALSE, TRUE)</formula>
        <label>Has Contact Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <formula>IF( Has_Contact_Record__c =TRUE, TEXT(Recruit__r.LanguagePrimary__c),  TEXT(Alt_Language__c) )</formula>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_COPE_Payment__c</fullName>
        <formula>IF( ISBLANK(Recruit__c), 0,  Recruit__r.Cope_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last COPE Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loc__c</fullName>
        <description>This is a location field short name use for list view.</description>
        <formula>TEXT(Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a location field short name use for list view.</inlineHelpText>
        <label>Loc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Region__c</fullName>
        <formula>CASE(TEXT( Location__c ),&quot;Fresno Early(2-5)&quot;, &quot;North&quot;,
&quot;Fresno Late(5-8)&quot;, &quot;North&quot;,&quot;Los Angeles Early(2-5)&quot;,&quot;South&quot;,
&quot;Los Angeles Late(5-8)&quot;,&quot;South&quot;,&quot;Oakland Early(2-5)&quot;,&quot;North&quot;, 
&quot;Oakland Late(5-8)&quot;,&quot;North&quot;, 
&quot;Sacramento Early(2-5)&quot;,&quot;North&quot;,
&quot;Sacramento Late(5-8)&quot;,&quot;North&quot;,
&quot;San Fernando Valley Early(2-5)&quot;,&quot;South&quot;,
&quot;San Fernando Valley Late(5-8)&quot;,&quot;South&quot;,
&quot;San Francisco Early(2-5)&quot;,&quot;North&quot;,
&quot;San Francisco Late(5-8)&quot;,&quot;North&quot;,
&quot;San Jose Early(2-5)&quot;,&quot;North&quot;,
&quot;San Jose Late(5-8)&quot;,&quot;North&quot;,&quot;Unknown&quot;)</formula>
        <label>Location Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Antelope Valley/Lancaster</fullName>
                    <isActive>false</isActive>
                    <label>Antelope Valley/Lancaster</label>
                </value>
                <value>
                    <fullName>Antelope Valley(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Antelope Valley(2-5)</label>
                </value>
                <value>
                    <fullName>Antelope Valley(5-8)</fullName>
                    <isActive>false</isActive>
                    <label>Antelope Valley(5-8)</label>
                </value>
                <value>
                    <fullName>Arroyo Grande</fullName>
                </value>
                <value>
                    <fullName>Bakersfield</fullName>
                </value>
                <value>
                    <fullName>Bakersfield(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Bakersfield(2-5)</label>
                </value>
                <value>
                    <fullName>Bakersfield(5-8)</fullName>
                    <isActive>false</isActive>
                    <label>Bakersfield(5-8)</label>
                </value>
                <value>
                    <fullName>Baldwin</fullName>
                    <isActive>false</isActive>
                    <label>Baldwin</label>
                </value>
                <value>
                    <fullName>Chico</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Fresno Early(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Fresno Early(2-5)</label>
                </value>
                <value>
                    <fullName>Fresno GOTV AM</fullName>
                </value>
                <value>
                    <fullName>Fresno GOTV PM</fullName>
                </value>
                <value>
                    <fullName>Fresno Late(5-8)</fullName>
                    <isActive>false</isActive>
                    <label>Fresno Late(5-8)</label>
                </value>
                <value>
                    <fullName>Lancaster</fullName>
                </value>
                <value>
                    <fullName>Lancaster Early(11-2)</fullName>
                    <isActive>false</isActive>
                    <label>Lancaster Early(11-2)</label>
                </value>
                <value>
                    <fullName>Lancaster Early(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Lancaster Early(2-5)</label>
                </value>
                <value>
                    <fullName>Lancaster GOTV AM</fullName>
                </value>
                <value>
                    <fullName>Lancaster GOTV PM</fullName>
                </value>
                <value>
                    <fullName>Lancaster Late(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Lancaster Late(2-5)</label>
                </value>
                <value>
                    <fullName>Lancaster Late(5-8)</fullName>
                    <isActive>false</isActive>
                    <label>Lancaster Late(5-8)</label>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Early(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Los Angeles Early(2-5)</label>
                </value>
                <value>
                    <fullName>Los Angeles GOTV AM</fullName>
                </value>
                <value>
                    <fullName>Los Angeles GOTV PM</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Late(5-8)</fullName>
                    <isActive>false</isActive>
                    <label>Los Angeles Late(5-8)</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>Oakland Early(2-5)</fullName>
                    <isActive>false</isActive>
                    <label>Oakland Early(2-5)</label>
                </value>
                <value>
                    <fullName>Oakland GOTV AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Recruit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <description>This is the UNION REP/ORG of Kaiser, Hospital and Community division.</description>
        <formula>IF( Override_Organizer__c = TRUE,Recruited_By__r.FirstName &amp; &apos; &apos; &amp; Recruited_By__r.LastName , IF
(  
Recruited_By__r.Employer1__c  =&apos;SEIU-UHW&apos;  &amp;&amp; CONTAINS(&quot;Kaiser:KAISER:Hospital:HOSPITAL:Community:COMMUNITY&quot;,Recruited_By__r.Department)  &amp;&amp;  CONTAINS(&quot;REG POLI ORG:UNION REP/ORG&quot;,Recruited_By__r.Title) , 
 Recruited_By__r.FirstName &amp; &apos; &apos; &amp; Recruited_By__r.LastName, 
 Recruited_By__r.Organizer_1__c 

)
)</formula>
        <inlineHelpText>This is the UNION REP/ORG of Kaiser, Hospital and Community division.</inlineHelpText>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Organizer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Organizer in the Recruited by (who gets the credit) is not the current Organizer, check this box;This is for Kaiser/Hospital/Community;</description>
        <inlineHelpText>When the Organizer in the Recruited by (who gets the credit) is not the current Organizer, check this box;This is for Kaiser/Hospital/Community;</inlineHelpText>
        <label>Override Organizer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB_Date__c</fullName>
        <formula>Volunteer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDI__c</fullName>
        <formula>Recruit__r.Pol_PDI_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PDI Id</inlineHelpText>
        <label>PDI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Organization__c</fullName>
        <label>Partner Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>IF( AND(Has_Contact_Record__c =TRUE, Division__c =&quot;Allies&quot;),  Recruit__r.Department , Partner_Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF( Has_Contact_Record__c =TRUE, Recruit__r.Phone, Alt_Phone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Name__c</fullName>
        <formula>IF( Alt_Last_Name__c  &lt;&gt; &quot;&quot;,  Alt_Last_Name__c &amp; &quot;,&quot; &amp;  Alt_First_Name__c,  Recruit_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecID__c</fullName>
        <description>This is a field short name use for list view.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a field short name use for list view.</inlineHelpText>
        <label>RecID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecruitDay__c</fullName>
        <formula>WEEKDAY( Volunteer_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecruitDay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruit_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentId</label>
        <referenceTo>Recruit_Agent__c</referenceTo>
        <relationshipLabel>Recruits</relationshipLabel>
        <relationshipName>Recruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruit_Name_2__c</fullName>
        <formula>IF(or(isnull( Recruit__c ),isblank(Recruit__c)), Alt_First_Name__c &amp; &quot; &quot; &amp;  Alt_Last_Name__c, Recruit__r.FirstName &amp; &quot; &quot; &amp;  Recruit__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruit Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruit_Name__c</fullName>
        <formula>IF( AND(AND(AND(Recruit__r.Account.Name =&quot;SEIU-UHW&quot;), Alt_Last_Name__c &lt;&gt;&quot;&quot;), TEXT(Alt_Person_Type__c)=&quot;Friend/Family of UHW Staff&quot; ), Alt_Last_Name__c &amp; &quot;, &quot; &amp;  Alt_First_Name__c, if (or(isnull( Recruit__c ),isblank(Recruit__c)),
if(or(isnull(Alt_Middle_Name__c), isblank(Alt_Middle_Name__c)),
         Alt_Last_Name__c &amp; &quot;, &quot; &amp;  Alt_First_Name__c,
         Alt_Last_Name__c &amp; &quot;, &quot; &amp;  Alt_First_Name__c &amp; &quot; &quot; &amp;  Alt_Middle_Name__c
      )
    ,
      if(or(isnull(Recruit__r.MiddleName), isblank(Recruit__r.MiddleName)),
         Recruit__r.LastName &amp; &quot;, &quot; &amp;  Recruit__r.FirstName, 
         Recruit__r.LastName &amp; &quot;, &quot; &amp; Recruit__r.FirstName &amp; &quot; &quot; &amp; Recruit__r.MiddleName
      )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruit_Status__c</fullName>
        <label>Recruit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Up</fullName>
                    <default>true</default>
                    <label>Signed Up</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the recruit is not a member or a community, leave this blank. Enter the recruit on the Family/Friends section.</inlineHelpText>
        <label>Recruit</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recruits</relationshipLabel>
        <relationshipName>Recruits3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruited_By_Eboard__c</fullName>
        <formula>Recruited_By__r.EBoard__c</formula>
        <label>Recruited By Eboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruited_By_FID__c</fullName>
        <formula>Recruited_By__r.FID__c</formula>
        <label>Recruited By FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruited_By_Title__c</fullName>
        <formula>Recruited_By__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruited By Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruited_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the person getting the credit.</inlineHelpText>
        <label>Recruited By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recruits (Recruited By)</relationshipLabel>
        <relationshipName>Recruits4</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <description>Field director of the UNION REP/ORG.</description>
        <formula>IF
( 

Recruited_By__r.Employer1__c =&apos;SEIU-UHW&apos; &amp;&amp; CONTAINS(&quot;Kaiser:KAISER:Hospital:HOSPITAL:Community:COMMUNITY&quot;,Recruited_By__r.Department)  &amp;&amp;  CONTAINS(&quot;UNION REP/ORG:REG POLI ORG&quot;,Recruited_By__r.Title),  
Recruited_By__r.User_Profile__r.Field_Director_Name__c ,  
Recruited_By__r.Regional_Director__c 

)</formula>
        <inlineHelpText>Field director of the UNION REP/ORG.</inlineHelpText>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemDt__c</fullName>
        <description>This is a reminded datetime field short name use for list view.</description>
        <formula>Reminded_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a reminded datetime field short name use for list view.</inlineHelpText>
        <label>RemDt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rem__c</fullName>
        <description>This is a reminded field short name use for list view.</description>
        <formula>Reminded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a reminded field short name use for list view.</inlineHelpText>
        <label>Rem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remind_Response__c</fullName>
        <label>Remind Response</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminded_Time__c</fullName>
        <label>Reminded Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reminded__c</fullName>
        <formula>IF( Remind_Response__c =&quot;Reminded&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Org__c</fullName>
        <description>This is for the Hospital Organizers; to separate two organizers from Stanford and Lucille; This is old formula.</description>
        <formula>IF(OR(CONTAINS(&quot;3166:3167&quot;,Employer_ID__c),CONTAINS(&quot;1107-000997649:1107-000093602&quot;, Recruited_By_FID__c )),  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName, 

IF (OR(ISNULL(Recruit__c ), ISBLANK(Recruit__c )),   IF( ISBLANK(Alt_Employer__c) ,  IF(Recruited_By__r.Account.Name=&quot;SEIU-UHW&quot;, Recruited_By__r.FirstName &amp; &quot; &quot; &amp; Recruited_By__r.LastName ,Recruited_By__r.Coordinator__c),  Alt_Employer__r.Organizer_1__r.FirstName  &amp; &quot; &quot; &amp; Alt_Employer__r.Organizer_1__r.LastName),     
 IF( CONTAINS(&quot;8913:8955:8956:8957&quot;, Recruit__r.Account.Employer_ID__c) ,  Recruited_By__r.FirstName &amp; &quot; &quot; &amp; Recruited_By__r.LastName, Recruit__r.Account.Organizer_1__r.FirstName &amp; &quot; &quot; &amp; Recruit__r.Account.Organizer_1__r.LastName) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep/Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Tags__c</fullName>
        <description>Report Tags from Recruit contact record.</description>
        <formula>Recruit__r.Report_Tags__c</formula>
        <label>Report Tags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatTotShift__c</fullName>
        <formula>IF( RecruitDay__c =7,  Total_Shift__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SatTotShift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_End__c</fullName>
        <label>Shift End</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Start__c</fullName>
        <label>Shift Start</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Status__c</fullName>
        <label>Shift Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_In_Time__c</fullName>
        <label>Signed In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed In</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>